src/css/index.scss
@import 'navigation.scss';
@import 'typography.scss';
body{background-color:#fff; margin: 0; padding:60; font-family: Lato; font-display:swap;}

#site-header{z-index: 1; top:0;}

.headroom {
  will-change: transform;
  transition: transform 200ms linear;
}
.headroom--pinned {
  transform: translateY(0%);
}
.headroom--unpinned {
  transform: translateY(-100%);
}



#section-main{padding:48px 0 0 0;}

.headroom-wrapper{width:100%;}

.headroom {display: flex; justify-content: space-between; align-items: center;width:100%; background:linear-gradient(#100000 0%, #666 100%); width:100%; height:auto;}

#site-header img{width:auto !important; height:auto !important; max-height: 60px;}
.site-logo{margin-left: 2rem;}
.mainmenu{margin-right:1rem; text-transform: uppercase; font-weight: bold;}
.mainmenu span{display:none;}
#site-header{}

// #site-header div div {position:absolute; right:3em;}

#gatsby-focus-wrapper{}

#content-layout{display: flex; flex-direction: row; justify-content: flex-start;}

#site-header{order:1; width:100%;}
#section-main{order:2; width:70%; vertical-align: top; padding: 4rem 2rem;}
#section-aside{order:3; width:30%; vertical-align: top; padding:4rem 2rem 2rem 0}
#section-footer{order:4; width:100%; align-content: center;/*  position:fixed; bottom:0; */}

#content-layout-full #section-main{width:auto; display: block;}





main{padding:0 1rem 0 1rem;}
.site-footer{background-color:#333; padding:1rem;}

#section-aside img, article picture img{max-width: 100%; border-radius: 10px; border:1px solid #222;}

.pagination{font-size:150%;}

// .post-wrapper, .page-header, .entry-header h1{padding:0 2rem}

// .entry-header h2{padding:0 1.5rem;}

.entry-meta{display: none;}


.entry-footer .mb-8{display:none;}


.gatsby-image-wrapper img{
display: flex;
	flex-shrink:inherit;
	justify-content: center;
	margin: auto;
-o-object-fit: cover; object-fit: cover; background-size: cover;
}


.next-post-featured-image{max-height: 200px;}

.taxonomy-links{display:flex; flex-flow: wrap;}
.taxonomy-links a{background-color:#fff; text-decoration: none; padding: .3rem .5rem; margin:.5rem .5rem 1rem 0;}

.entry-footer__taxonomy{margin:0 0; display: flex; flex-flow: wrap;}
.entry-footer__taxonomy span:first-child{display:none;}

// .tag-label{margin-right:2rem;}
.engage-container{display: flex; justify-content: space-between; align-items: top;}
.share-flex{justify-content:space-between;}

.rounded {
border-radius: 0.25rem;
}


p.link-more{display: none;}

.comment-respond {display: flex; justify-content: center; align-self: center; flex-direction: column; width: 60%; padding:1rem; text-align: center;}
.comment-respond  input, text-area{
	flex-wrap: wrap;
	padding: 0.5rem 0.75rem;
	width:90%;

}

.comment-form label{margin-left:1rem; text-align: left; float: left;}

@media (prefers-color-scheme: dark) {
  body {
    color: #ddd;
    background-color: #222;
  }
  a {color:#fff;}
  .taxonomy-links a{background-color:#9b9898; color:#333;}
}



@media screen and (max-width: 790px) {
	
#content-layout{display: block;}
#site-header{order:1; width:100%; display:block;}
#section-main{order:2; width:auto; vertical-align: top; padding:3rem 1rem 0 1rem;}
#section-aside{order:3; width:auto; vertical-align: top; padding:1rem;}
#section-footer{order:4; width:auto;}


.mainmenu{text-align: center;}
.mainmenu span{font-size:80%;}
#site-header{position:fixed; z-index:1; top:0; align-items: center; }

	
} // END MOBILE

